--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.14.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
